# geo-optimizer

./: .env.example  .gitignore  README.md  deploy-env.sh  deploy-services.sh  deploy.sh  monitor-testing.sh  pyproject.toml
data/personas/: sf_foodie.json  sf_tourist.json
data/prompts/: test_prompts.json
geo-frontend/: .gitignore  start-backend.sh  start-frontend.sh
geo-frontend/client/: package-lock.json  package.json  vite.config.js
geo-frontend/client/src/: App.jsx  index.css
geo-frontend/client/src/components/: BrandDescription.jsx  ContentDisplay.jsx  Header.jsx  LoadingSpinner.jsx  PersonaCard.jsx  PersonaGenerator.jsx  PromptGenerator.jsx  PromptList.jsx  TestResults.jsx  (+2 more)
geo-frontend/server/: .env.example  app.py  requirements.txt
geo-testing/: .gitignore  AUTH_GUIDE.md  SETUP_COMPLETE.md  USAGE.md  analyze_results.py  check_auth.py  check_mongodb_data.py  demo_test.py  example_geo_test.py  export_results.py  monitor_mongodb.py  quick_chat_test.py  requirements.txt  run_from_db.py  run_tech_test.py  test_auth.py  test_fresh_login.py  test_login.py  test_login_detection.py  verify_account.py
geo-testing/data/personas/: boston_student.json  nyc_freelancer.json  nyc_visitor.json  sf_developer.json
geo-testing/data/prompts/: tech_prompts.json
geo-testing/scripts/: login.py  record_chat.py  record_login.py  record_memory_clear.py  refresh_auth.py
geo-testing/utils/: browser.py  database.py
geo-testing/workflows/: memory.py
scripts/: run_tests.py
storage/: auth_state.json
utils/: database.py
workflows/: chat.py  login.py  memory.py
